# marble-solitaire-model

./: .dockerignore  .gitignore  CLAUDE.md  LICENSE  README.md  plan.md  pyproject.toml
docs/history/: plan.md
src/marble_solitaire/: board.py  export.py  inference.py  mcts.py  model.py  seeds.py  self_play.py  train.py
tests/: test_board.py  test_export.py  test_inference.py  test_mcts.py  test_model.py  test_self_play.py  test_train.py
vertex-training/: Dockerfile  build.sh  cloudbuild.yaml  phase2-spec.yaml  phase3-spec.yaml  phase4-spec.yaml  run.py  submit-console-steps.md  submit.sh
web/: index.html  package-lock.json  package.json  tsconfig.json
web/public/models/: gen1_clueless.onnx  gen2_beginner.onnx  gen3_intermediate.onnx  gen4_advanced.onnx  gen5_master.onnx
web/src/: board.ts  main.ts  solver.ts  style.css  training-viz.ts
